--- a/AndroidStudioProjects/My Application/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/My Application/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center">
+    <Button
+        android:id="@+id/visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="visible" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
