--- a/AndroidStudioProjects/My Application/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/My Application/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="visible" />
+    <Button
+        android:id="@+id/invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="invisible" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:text="SeoYeon Mun" />
     <ImageView
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/bird" />
