--- a/PracticeInClass/MidExamPractice/myapplication9/src/main/res/layout/activity_main.xml
+++ b/PracticeInClass/MidExamPractice/myapplication9/src/main/res/layout/activity_main.xml
@@ -7,15 +7,23 @@
     android:padding="20dp"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/intro"/>
+
     <TextView
         android:id="@+id/mainTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/iv"
         android:layout_marginTop="20dp"
-        android:textSize="20dp"
-        android:textStyle="bold"
         android:gravity="center_horizontal"
-        android:text="@string/intro_main"/>
+        android:text="@string/intro_main"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/detailTV"
@@ -26,7 +34,6 @@
         android:text="@string/intro_detail"
         android:textSize="20dp"
         android:textStyle="bold" />
-
     <TextView
         android:id="@+id/delayTV"
         android:layout_width="match_parent"
@@ -37,15 +44,16 @@
         android:text="@string/intro_delay"
         android:textSize="20dp"
         android:textStyle="bold" />
+
     <Button
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/delayTV"
         android:layout_marginTop="20dp"
+        android:background="@drawable/round_btn"
         android:gravity="center_horizontal"
         android:text="@string/intro_button"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:background="@drawable/round_btn"/>
+        android:textStyle="bold" />
 </RelativeLayout>
