--- a/PracticeInClass/MyApplication9/app/src/main/res/layout/activity_main.xml
+++ b/PracticeInClass/MyApplication9/app/src/main/res/layout/activity_main.xml
@@ -43,15 +43,16 @@
         android:text="@string/intro_delay"
         android:textSize="20dp"
         android:textStyle="bold" />
+
     <Button
         android:id="@+id/btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/delayTV"
         android:layout_marginTop="20dp"
+        android:background="@drawable/round_btn"
         android:gravity="center_horizontal"
         android:text="@string/intro_button"
         android:textSize="20dp"
-        android:textStyle="bold"
-        android:background="@drawable/round_btn"/>
+        android:textStyle="bold" />
 </RelativeLayout>
