--- a/PracticeInClass/MyApplication11/app/src/main/res/layout/fragment_2.xml
+++ b/PracticeInClass/MyApplication11/app/src/main/res/layout/fragment_2.xml
@@ -4,12 +4,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00ff00"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragment2">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    --탭 레이아웃
+    --탭과 탭을 눌렀을 때 화면으로 구성
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        --1. 탭 나열
+        <com.google.android.material.tabs.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabs"
+            app:tabTextColor="#ff00ff">
+
+            --2. tab 버튼에 해당되는 것을 태그로 배치
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="tab1"/>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="tab2"/>
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="tab3"/>
+        </com.google.android.material.tabs.TabLayout>
+
+        --3. 각각의 탭을 눌렀을 때의 화면
+        --FrameLayout은 여러개의 화면이 겹쳐있다. tab버튼을 누를 때마다 숨겨진 화면이 앞으로 보여지게 되는 것
+
+        --fragment21, 22, 23.xml과 .kt 파일 만들어서 적용
+
+        --Fragment2에서 tab을 설정해줬으니, tab선택시 변경되는 화면 구조의 정의는
+        --Fragment2.kt에서 진행!!
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/tabContent"/>
+    </LinearLayout>
 
 </FrameLayout>
